# KinectFusion_OpenCL

./: CMakeLists.txt  README.md  setup_external.sh
cmake/: FindOpenCL.cmake
data/: downloadFreiburg.py
libs/OpenNI-Linux-x64-2.2/Documentation/: _conventions_8txt.html  _getting_started_8txt.html  _main_page_8txt.html  _n_o_t_i_c_e_8txt.html  _oni_enums_8h.html  _oni_enums_8h_source.html  _open_n_i_8h.html  _open_n_i_8h_source.html  _release_notes_8txt_8txt.html  annotated.html  classes.html  classopenni_1_1_array-members.html  classopenni_1_1_array.html  classopenni_1_1_camera_settings-members.html  classopenni_1_1_camera_settings.html  classopenni_1_1_coordinate_converter-members.html  classopenni_1_1_coordinate_converter.html  classopenni_1_1_device-members.html  classopenni_1_1_device.html  classopenni_1_1_device_info-members.html  classopenni_1_1_device_info.html  classopenni_1_1_open_n_i-members.html  classopenni_1_1_open_n_i.html  classopenni_1_1_open_n_i_1_1_device_connected_listener-members.html  classopenni_1_1_open_n_i_1_1_device_connected_listener.html  classopenni_1_1_open_n_i_1_1_device_disconnected_listener-members.html  classopenni_1_1_open_n_i_1_1_device_disconnected_listener.html  classopenni_1_1_open_n_i_1_1_device_state_changed_listener-members.html  classopenni_1_1_open_n_i_1_1_device_state_changed_listener.html  classopenni_1_1_playback_control-members.html  classopenni_1_1_playback_control.html  classopenni_1_1_recorder-members.html  classopenni_1_1_recorder.html  classopenni_1_1_sensor_info-members.html  classopenni_1_1_sensor_info.html  classopenni_1_1_video_frame_ref-members.html  classopenni_1_1_video_frame_ref.html  classopenni_1_1_video_mode-members.html  classopenni_1_1_video_mode.html  classopenni_1_1_video_stream-members.html  (+31 more)
libs/OpenNI-Linux-x64-2.2/Documentation/java/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html
libs/OpenNI-Linux-x64-2.2/Documentation/java/org/openni/: CoordinateConverter.html  CropArea.html  Device.html  DeviceInfo.html  ImageRegistrationMode.html  OpenNI.DeviceConnectedListener.html  OpenNI.DeviceDisconnectedListener.html  OpenNI.DeviceStateChangedListener.html  OpenNI.html  PixelFormat.html  PlaybackControl.html  Point2D.html  Point3D.html  Recorder.html  SensorInfo.html  SensorType.html  Version.html  VideoFrameRef.html  VideoMode.html  VideoStream.CameraSettings.html  VideoStream.NewFrameListener.html  VideoStream.html  package-frame.html  package-summary.html  package-tree.html
libs/OpenNI-Linux-x64-2.2/Redist/: libOpenNI2.so.0
libs/OpenNI-Linux-x64-2.2/Tools/: NiViewer  PS1080Console  PSLinkConsole
src/: OpenclFrame.cpp  OpenclFrame.hpp  clBuffer.hpp  clMath.hpp  helpers.hpp  icp.cpp  icp.hpp  kernelExecutors.cpp  kernelExecutors.hpp  main.cpp  math.hpp  paramProvider.cpp  paramProvider.hpp  raycaster.cpp  raycaster.hpp  rgbdBenchTUM.cpp  rgbdBenchTUM.hpp  timer.hpp  tsdf.cpp  tsdf.hpp
src/cl/: mipMapDepth.cl  mipmap.cl  normalMap.cl  raycastVolume.cl  transformVertNorm.cl  tsdfIntegration.cl  vertexMap.cl
